cabal-version:      2.4
name:               func-ytbz
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Flowrey
maintainer:         flowrey@laposte.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable func-ytbz
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Musicbrainz, Youtube, Levenshtein

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      , http-client
                      , http-client-tls
                      , http-types
                      , aeson
                      , regex-tdfa
                      , bytestring
                      , lens-aeson
                      , lens
                      , array
                      
    hs-source-dirs:   app
    default-language: Haskell2010