(lang dune 3.16)

(using melange 0.1)

(name cnaminator)

(generate_opam_files true)

(source
 (github Flowrey/cnaminator))

(authors "Flowrey")

(maintainers "Flowrey")

(license MIT)

(documentation https://url/to/documentation)

(package
 (allow_empty)
 (name cnaminator)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml melange)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
