[package]
name = "bittorent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = { version = "0.3.3", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_bytes = "0.11.7"
sha-1 = "0.10.0"
tokio = { version = "1.23.0", features = ["full", "test-util"] }
url = "2.3.1"
